--- a/ks/answer_page.html
+++ b/ks/answer_page.html
@@ -6,11 +6,11 @@
     <p>
       <form method="post" action="answer.cgi">
 	ProblemNumber<br>
-	<input type="number" name="probnum" size="4"><br><br>
+	<input type="number" name="prob_num" size="4"><br><br>
 	Language<br>
 	<select name="language">
-	  <option value="cpp">cpp</option>
-	  <option value="ruby">ruby</option>
+	  <option value="C++">C++</option>
+	  <option value="Ruby">Ruby</option>
 	</select><br><br>
 	SourceCode<br>
 	<textarea name="sourcecode" cols="50" rows="10"></textarea><br>
